--- a/app/views/factory/formulas/_form.html.erb
+++ b/app/views/factory/formulas/_form.html.erb
@@ -67,7 +67,7 @@
         </div>
 
         <!-- Button to add new formula item -->
-        <button type="button" data-action="common--nested-form#addItem" class="btn-primary">Add Formula Item</button>
+        <button type="button" data-action="common--nested-form#addItem" class="btn-primary"><%= t("actions.add_new_model", model: FormulaItem.model_name.human) %></button>
       </div>
     </div>
   <% end %>
