--- a/app/views/factory/products/index.html.erb
+++ b/app/views/factory/products/index.html.erb
@@ -53,7 +53,7 @@
                 <%= sort_link(@q, :name, Product.human_attribute_name(:name), class: "flex justify-center", data: { turbo_action: "advance"}) %>
               </th>
               <th scope="col" class="px-2 md:px-4 py-3 text-sm font-semibold text-gray-900 group">
-                <%= sort_link(@q, :formula_name, Product.human_attribute_name(:formula), class: "flex justify-center", data: { turbo_action: "advance"}) %>
+                <%= sort_link(@q, :manufactured_product_formula_name, ManufacturedProduct.human_attribute_name(:formula), class: "flex justify-center", data: { turbo_action: "advance"}) %>
               </th>
               <th scope="col" class="px-2 md:px-4 py-3 text-sm font-semibold text-gray-900 group">
                 <%= sort_link(@q, :price, Product.human_attribute_name(:price), class: "flex justify-center", data: { turbo_action: "advance"}) %>
@@ -73,7 +73,7 @@
                   <%= link_to product.name, factory_product_path(product), class: "flex justify-center", data: { turbo_frame: "_top" } %>
                 </td>
                 <td class="whitespace-nowrap px-2 md:px-4 py-3 text-sm text-gray-500 text-center">
-                  <%= link_to product.formula_name, factory_product_path(product), class: "flex justify-center", data: { turbo_frame: "_top" } %>
+                  <%= link_to product.manufactured_product.formula_name, factory_product_path(product), class: "flex justify-center", data: { turbo_frame: "_top" } %>
                 </td>
                 <td class="whitespace-nowrap px-2 md:px-4 py-3 text-sm text-gray-500 text-center">
                   <%= number_to_currency product.price %>
