Implement products office side

--- a/app/views/common/lists/_description.html.erb
+++ b/app/views/common/lists/_description.html.erb
@@ -1,6 +1,6 @@
 <%# locals: (items:) -%>
 
-<dl class="divide-y divide-light-gray">
+<dl class="divide-y divide-light-gray border-b border-light-gray">
   <% items.each do |item| %>
     <div class="px-4 py-6 grid grid-cols-2 md:grid-cols-3 sm:gap-4 sm:px-0">
       <dt class="text-sm font-medium leading-6 text-gray-100"><%= item[:label] %></dt>
