--- a/app/views/factory/formula_elements/index.html.erb
+++ b/app/views/factory/formula_elements/index.html.erb
@@ -74,8 +74,8 @@
                     <span class="sr-only">Ver materia prima </span><%= formula_element.name %>
                   <% end %>
                 </td>
-                <td class="hidden sm:table-cell whitespace-nowrap px-2 md:px-4 py-3 text-sm text-gray-500">
-                  <%= "#{formula_element.current_stock.round(1)}kg" unless formula_element.current_stock.blank? %>
+                <td class="hidden sm:table-cell whitespace-nowrap px-2 md:px-4 py-3 text-sm text-gray-500 text-right">
+                  <%= "#{number_with_precision formula_element.current_stock} kg" unless formula_element.current_stock.blank? %>
                 </td>
                 <td class="whitespace-nowrap px-2 md:px-4 py-3 text-sm text-gray-500">
                   <div class="relative w-full bg-light-gray-300 h-4 rounded-md overflow-hidden">
