--- a/app/views/office/products/_form.html.erb
+++ b/app/views/office/products/_form.html.erb
@@ -14,7 +14,7 @@
       <div>
         <%= form.label :description, class: "block text-sm font-medium leading-6 text-gray-900" %>
         <div class="mt-2">
-          <%= form.textarea :description, rows: 4, class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-300 focus:ring-2 focus:ring-inset focus:ring-blue-300 sm:text-sm sm:leading-6" %>
+          <%= form.rich_textarea :description, rows: 4, class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-300 focus:ring-2 focus:ring-inset focus:ring-blue-300 sm:text-sm sm:leading-6" %>
         </div>
       </div>
 
