--- a/app/assets/stylesheets/actiontext.css
+++ b/app/assets/stylesheets/actiontext.css
@@ -438,3 +438,56 @@ trix-editor .attachment__metadata {
   padding: 0 !important;
   max-width: 100% !important;
 }
+
+/* Tailwind Override */
+
+trix-editor h1 {
+  font-size: 1.2em;
+  line-height: 1.2;
+}
+
+trix-editor a:not(.no-underline) {
+  text-decoration: underline;
+}
+
+trix-editor a:visited {
+  color: green;
+}
+
+.trix-content ul {
+  list-style-type: disc;
+}
+
+trix-editor ul {
+  list-style-type: disc;
+  padding-left: 1rem;
+}
+
+.trix-content ol {
+  list-style-type: decimal;
+}
+
+trix-editor ol {
+  list-style-type: decimal;
+  padding-left: 1rem;
+}
+
+trix-editor pre {
+  display: inline-block;
+  width: 100%;
+  vertical-align: top;
+  font-family: monospace;
+  font-size: 1.5em;
+  padding: 0.5em;
+  white-space: pre;
+  background-color: #eee;
+  overflow-x: auto;
+}
+
+trix-editor blockquote {
+  border: 0 solid #ccc;
+  border-left-width: 0px;
+  border-left-width: 0.3em;
+  margin-left: 0.3em;
+  padding-left: 0.6em;
+}
