--- a/app/views/factory/making_orders/index.html.erb
+++ b/app/views/factory/making_orders/index.html.erb
@@ -23,7 +23,7 @@
         },
         class: "w-full max-w-lg lg:max-w-xs",
       ) do |f| %>
-        <%= f.label :id_or_comments_or_making_order_formula_name_cont, t("placeholders.search_by.comments_formula"), class: "sr-only" %>
+        <%= f.label :id_or_comments_plain_text_or_making_order_formula_name_cont, t("placeholders.search_by.comments_formula"), class: "sr-only" %>
         <div class="relative text-gray-300 focus-within:text-gray">
           <div class="pointer-events-none absolute inset-y-0 left-0 flex items-center pl-3">
             <svg class="size-5" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true" data-slot="icon">
@@ -31,7 +31,7 @@
             </svg>
           </div>
           <%= f.search_field(
-            :id_or_comments_or_making_order_formula_name_cont,
+            :id_or_comments_plain_text_or_making_order_formula_name_cont,
             autofocus: true,
             autocomplete: "off",
             class: "block w-full rounded-md border-0 ring-0 ring-offset-1 ring-offset-gray bg-white py-1.5 pl-10 pr-3 text-gray-900 focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-blue sm:text-sm/6",
@@ -85,10 +85,10 @@
                   <%= making_order.making_order_items.size %>
                 </td>
                 <td class="whitespace-nowrap px-2 md:px-4 py-3 text-sm text-gray-500 text-center">
-                  <%= number_with_precision making_order.total_weight %>
+                  <%= number_with_precision making_order.total_weight %> kg
                 </td>
                 <td class="whitespace-nowrap px-2 md:px-4 py-3 text-sm text-gray-500 text-center">
-                  <%= truncate making_order.comments, :length => 55 %>
+                  <%= truncate making_order.comments.to_plain_text, :length => 55 %>
                 </td>
                 <td class="whitespace-nowrap px-2 md:px-4 py-3 text-sm text-gray-500 text-center">
                   <%= t("#{making_order.state}", :scope => [:activerecord, :attributes, :making_order, :state_values]) %>
