--- a/app/views/office/clients/new.html.erb
+++ b/app/views/office/clients/new.html.erb
@@ -1,7 +1,7 @@
 <%= render(
   "common/headings/page",
   breadcrumbs: [
-    { title: t("navigation.dashboard"), path: factory_root_path },
+    { title: t("navigation.dashboard"), path: office_root_path },
     { title: t("titles.client.index"), path: office_clients_path },
     { title: t("navigation.new"), path: new_office_client_path },
   ],
