--- a/app/views/office/products/show.html.erb
+++ b/app/views/office/products/show.html.erb
@@ -17,7 +17,7 @@
       items: [
         { label: Product.human_attribute_name(:id), value: @product.id },
         { label: Product.human_attribute_name(:name), value: @product.name },
-        { label: Product.human_attribute_name(:description), value: @product.description },
+        { label: Product.human_attribute_name(:comments), value: @product.comments },
         { label: Product.human_attribute_name(:min_stock), value: @product.min_stock },
         { label: Product.human_attribute_name(:max_stock), value: @product.max_stock },
         { label: Product.human_attribute_name(:current_stock), value: @product.current_stock },
