Show date and time

--- a/app/views/factory/formulas/show.html.erb
+++ b/app/views/factory/formulas/show.html.erb
@@ -65,7 +65,7 @@
                 <p class="text-sm text-gray-500">Fórmula ingresada</p>
               </div>
               <div class="whitespace-nowrap text-right text-sm text-gray-500">
-                <time title="<%= l(@formula.created_at, format: :compact) %>" datetime="<%= l(@formula.created_at, format: :machine) %>"><%= l(@formula.created_at.to_date, format: :short) %></time>
+                <time title="<%= l(@formula.created_at, format: :compact) %>" datetime="<%= l(@formula.created_at, format: :machine) %>"><%= l(@formula.created_at, format: :short) %></time>
               </div>
             </div>
           </div>
