Fix dropdown menu label restoration

--- a/app/views/common/components/_dropdown.html.erb
+++ b/app/views/common/components/_dropdown.html.erb
@@ -12,7 +12,7 @@
         value="<%= input_value %>"
         type="hidden"
         data-common--dropdown-target="valueInput"
-        data-label=<%= search_value %>
+        data-label="<%= search_value %>"
       >
       <input
         placeholder="<%= placeholder %>"
