--- a/app/views/office/products/_supplier_product_item_fields.html.erb
+++ b/app/views/office/products/_supplier_product_item_fields.html.erb
@@ -19,7 +19,7 @@
 
     <%= ff.text_field(
       :code,
-      placeholder: "Código",
+      placeholder: SupplierProduct.human_attribute_name(:code),
       disabled: marked_for_destruction,
       class: "block w-full rounded-md border-0 py-1.5 text-xs text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-300 focus:ring-2 focus:ring-inset focus:ring-blue-300 sm:leading-6 #{ 'ring-red' if supplier_product_item.errors.any? }",
     ) %>
@@ -27,7 +27,7 @@
     <div>
       <%= ff.number_field(
         :price,
-        placeholder: "Precio",
+        placeholder: SupplierProduct.human_attribute_name(:price),
         min: 0,
         step: 0.01,
         disabled: marked_for_destruction,
