Mobile UI enhancements

--- a/app/views/factory/making_orders/_form.html.erb
+++ b/app/views/factory/making_orders/_form.html.erb
@@ -57,7 +57,7 @@
           <% end %>
         </div>
 
-        <button type="button" data-action="common--nested-form#addItem" class="btn-primary"><%= t("actions.add_new_model", model: MakingOrderItem.model_name.human) %></button>
+        <button type="button" data-action="common--nested-form#addItem" class="cursor-pointer"><%= heroicon("plus-circle", options: { class: "h-8 w-8 text-blue" }) %></button>
       </div>
     </div>
   <% end %>
