--- a/app/views/factory/making_orders/_making_order_item_fields.html.erb
+++ b/app/views/factory/making_orders/_making_order_item_fields.html.erb
@@ -32,7 +32,7 @@
       ) %>
     </div>
 
-    <button type="button" class="group" data-action="common--nested-form#removeItem">
+    <button type="button" class="group cursor-pointer" data-action="common--nested-form#removeItem">
       <%= heroicon("trash", options: { class: "h-4 w-4 shrink-0 transition text-light-red group-hover:text-red" }) %>
     </button>
   <% end %>
