--- a/app/views/factory/products/index.html.erb
+++ b/app/views/factory/products/index.html.erb
@@ -61,6 +61,9 @@
                 <th scope="col" class="px-1 md:px-4 py-3 text-sm font-semibold text-gray-900 group">
                   <%= sort_link(@q, :current_stock, Product.human_attribute_name(:current_stock), class: "flex justify-center", data: { turbo_action: "advance"}) %>
                 </th>
+                <th scope="col" class="hidden md:table-cell px-1 md:px-4 py-3 text-sm font-semibold text-gray-900 group">
+                  <%= sort_link(@q, :stock_level, Product.human_attribute_name(:stock_level), class: "flex justify-center", data: { turbo_action: "advance"}) %>
+                </th>
                 <th scope="col" class="hidden lg:table-cell px-1 md:px-4 py-3 text-sm font-semibold text-gray-900 group">
                   <%= sort_link(@q, :created_at, Product.human_attribute_name(:created_at), class: "flex justify-center", data: { turbo_action: "advance"}) %>
                 </th>
@@ -80,6 +83,17 @@
                   </td>
                   <td class="whitespace-nowrap px-1 md:px-4 py-3 text-sm text-gray-500 text-center">
                     <%= product.current_stock %>
+                  </td>
+                  <td class="hidden md:table-cell whitespace-nowrap px-1 md:px-4 py-3 text-sm text-gray-500">
+                    <div class="relative w-full bg-light-gray-300 h-4 rounded-md overflow-hidden">
+                      <div
+                        class="absolute h-full rounded-md transition-all flex items-center justify-center text-white font-semibold"
+                        style="width: <%= product.stock_level %>%; background-color: <%= stock_level_color(product.stock_level) %>;">
+                      </div>
+                      <span class="absolute left-0 w-full text-center text-xs">
+                        <%= number_to_percentage(product.stock_level, precision: 0) %>
+                      </span>
+                    </div>
                   </td>
                   <td class="hidden lg:table-cell whitespace-nowrap px-1 md:px-4 py-3 text-sm text-gray-500 text-center">
                     <%=l product.created_at, format: :compact %>
